# patrol

./: .bazelignore  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  Taskfile.yml  biome.json  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taskfile.yaml  test-task.yml
docs/architecture/: build-system.md  distribution.md  ipc.md  overview.md
engine/: BUILD.bazel  go.mod  go.work  main.go
engine/api/: package.json  tsconfig.json
engine/api/src/: index.ts
engine/api/v1/: patrol.proto
engine/patrold/: go.mod  main.go
engine/patrold/internal/api/v1/: patrol.pb.go
engine/patrold/internal/ipc/: listener_windows.go
engine/patrold/internal/server/: patrol.go
patrol/app/: package.json  tsconfig.json
patrol/app/src/engine/: client.ts  controller.ts
patrol/app/src/entrypoints/: bootstrap copy.ts  bootstrap.ts  core.tsx
patrol/webui/: package.json  tsconfig.json
patrol/webui/src/: index.html
patrold/api/: buf.gen.yaml  buf.yaml  package.json
patrold/app/: .air.toml  go.mod  go.sum
patrold/app/internal/api/v1/patrolv1connect/: patrol.connect.go
patrold/app/internal/ipc/: listener_unix.go
shell/: BUILD.bazel  package.json  pnpm-workspace.yaml  tsconfig.json
shell/patrol/: BUILD.bazel  package.json  pnpm-lock.yaml
shell/patrol/src/: config.ts  index.html  logger.ts  main.tsx
shell/patrol/src/bootstrap/: index.ts
shell/patrol/src/cli/: index.ts
shell/patrol/src/engine/: client.ts  controller.ts
shell/patrol/src/main/: index.tsx
shell/src/: main.ts
shell/tools/: runner.js
shell/webui/: package.json
shell/webui/src/: App.tsx  index.css  index.tsx
