module(
    name = "patrol",
    version = "0.0.1",
)

# ---------------------------------------------------------
# Go Dependencies
# ---------------------------------------------------------
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Register the Go Toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

# Parse Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//engine:go.mod")
use_repo(go_deps)

# ---------------------------------------------------------
# Node.js / TypeScript Dependencies
# ---------------------------------------------------------
bazel_dep(name = "aspect_rules_js", version = "3.0.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.5")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0") # For bundling TS

# Register Node Toolchain and fetch pnpm dependencies
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
