load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "engine_lib",
    srcs = ["main.go"],
    importpath = "github.com/npclaudiu/patrol/engine",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "engine",
    embed = [":engine_lib"],
    visibility = ["//visibility:public"],
)
